# blinky_bare_metal_asm

./: CMakeLists.txt  Readme.md
Src/: blinky.s
build (for reference)/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  blinky_bare_metal_asm.elf  blinky_bare_metal_asm.hex  blinky_bare_metal_asm.map  build.ninja  cmake_install.cmake  compile_commands.json
build (for reference)/debug/.cmake/api/v1/reply/: cache-v2-4a17ca90232f6513279e.json  cmakeFiles-v1-4ff165451de993851279.json  codemodel-v2-6325426e1092e599d8b8.json  index-2024-11-20T11-01-06-0238.json  target-blinky_bare_metal_asm-Debug-d18c40d7020c632435dd.json
cmake/: vscode_generated.cmake
